Changes to filters styling
Gov web kit does not use the font size that I needed.

--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -4,7 +4,7 @@
     {{ govukInput({
         label: {
             text: "Name of goods or commodity code",
-            classes: "govuk-!-font-weight-bold"
+            classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "commodity-code",
         name: "commodity-code"
