--- a/src/app/components/filter-company-name/template.njk
+++ b/src/app/components/filter-company-name/template.njk
@@ -4,7 +4,7 @@
     {{ govukInput({
         label: {
             text: "Company name",
-            classes: "govuk-!-font-weight-bold"
+            classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "company-name",
         name: "company-name"
