--- a/src/app/components/filter-sic-codes/template.njk
+++ b/src/app/components/filter-sic-codes/template.njk
@@ -4,7 +4,7 @@
     {{ govukInput({
         label: {
             text: "SIC codes",
-            classes: "govuk-!-font-weight-bold"
+            classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "sic-codes",
         name: "sic-codes"
