--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -12,7 +12,7 @@
                     </p>
                 </div>
                 <div class="govuk-grid-column-one-half">
-                    <a class="govuk-link app-pull-right govuk-!-margin-top-3 " href="#">Remove all filters</a>
+                    <a class="govuk-link app-pull-right govuk-!-margin-top-3  " href="#">Remove all filters</a>
                 </div>
 
             </div>
@@ -126,6 +126,23 @@
                                                        class="c-pagination__label">1000</a></li>
             </ul>
             <a href="?sortby=date%3Adesc&amp;page=2" class="c-pagination__label c-pagination__label--next">Next</a>
+        </nav>
+
+
+.app-pagination
+    .app-pagination-list
+        app-pagination-list-item
+
+        
+        <nav>
+            <ul>
+                <li>
+                <a href
+                1
+                </li>
+
+                
+            </ul>
         </nav>
     </article>
 </article>
