--- a/src/app/components/filter-latest-export-evidence/template.njk
+++ b/src/app/components/filter-latest-export-evidence/template.njk
@@ -1,22 +1,27 @@
 {% from "date-input/macro.njk" import govukDateInput %}
 
 <div class="govuk-form-group app-filter-group-heading">
-    <h4 class="govuk-heading-s">Latest export evidence</h4>
+    <h4 class="govuk-heading-s app-filter-heading">Latest export evidence</h4>
     {{ govukDateInput({
         id: "export-evidence-start-date",
         namePrefix: "export-evidence-start-date",
-        fieldset: {
+        classes: "app-filter-dateinput-group",    
+        fieldset:  {
             legend: {
-                text: "Start date"
+                text: "Start date",
+                classes: "app-filter-label"
+                
             }
         }
     }) }}
     {{ govukDateInput({
         id: "export-evidence-end-date",
         namePrefix: "export-evidence-end-date",
+        classes: "app-filter-dateinput-group", 
         fieldset: {
             legend: {
-                text: "End date"
+                text: "End date",
+                classes: "app-filter-label"
             }
         }
     }) }}
