--- a/src/app/components/filter-service-used/template.njk
+++ b/src/app/components/filter-service-used/template.njk
@@ -5,13 +5,14 @@
     <div class=" app-filter-group-heading">
         {{ govukLabel({
             text: "Service used",
-            classes: "govuk-!-font-weight-bold"
+            classes: "govuk-!-font-weight-bold app-filter-heading"
         }) }}
     </div>
-    <div class="app-filter-group-list">
+    <div class="app-filter-group-list ">
         {{ govukCheckboxes({
             idPrefix: "service-used",
             name: "service-used",
+            classes: "app-filter-checkboxes-group",
 
             items: [
                 {
