--- a/src/app/components/filter-turnover/template.njk
+++ b/src/app/components/filter-turnover/template.njk
@@ -1,10 +1,12 @@
 {% from "input/macro.njk" import govukInput %}
 
 <div class="govuk-form-group app-filter-group-heading">
-    <h4 class="govuk-heading-s">Turnover (&pound;)</h4>
+    <h4 class="govuk-heading-s app-filter-label">Turnover (&pound;)</h4>
     {{ govukInput({
         label: {
+            classes: "app-filter-label",
             text: "Minimum"
+            
         },
         id: "turnover-minimum",
         name: "turnover-minimum"
@@ -12,6 +14,7 @@
 
     {{ govukInput({
         label: {
+            classes: "app-filter-label",
             text: "Maximum"
         },
         id: "turnover-maximum",
