--- a/src/app/components/render-collection/render-collection.scss
+++ b/src/app/components/render-collection/render-collection.scss
@@ -44,3 +44,16 @@
   border-bottom: 5px solid govuk-colour("black");
 }
 
+
+.app-pagination {
+  &-list {
+    border: 2px solid purple;
+
+    &-item {
+      background: green;
+      display: inline-block;
+    }
+  }
+}
+
+
