DST-925 removed template artefacts

--- a/src/app/components/filter-commodity-code/template.njk
+++ b/src/app/components/filter-commodity-code/template.njk
@@ -3,7 +3,7 @@
 <div class="govuk-form-group app-filter-group-heading">
     {{ govukInput({
         label: {
-            text: "Name of goods or commodity code",
+            text: "Commodity code",
             classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "commodity-code",
