DST-1068 removed legacy assets and updated config  to solve the dist errors

--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!--[if !IE 8]><!-->
-    <!-- build:css(src) /public/css/acs.vendor.min.css -->
+    <!-- build:css(src) /public/css/styles.min.css -->
         <link rel="stylesheet" href="/public/css/styles.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism.min.css">
@@ -25,8 +25,8 @@
 {% endblock %}
 
 {% block bodyEnd %}
-    <!-- build:js(src) /public/js/acs.min.js -->
-        <script src="/public/js/acs.js"></script>
+    <!-- build:js(src)/public/js/all.js -->
+        <script src="/public/js/all.js"></script>
     <!-- endbuild -->
 
     <script>window.GOVUKFrontend.initAll()</script>
