--- a/src/app/views/acs/index.njk
+++ b/src/app/views/acs/index.njk
@@ -25,6 +25,7 @@
         <div class="govuk-grid-column-one-third">
             <form action="">
                 {{ filterCompanyName({}) }}
+                <button type="submit"></button>
                 {{ filterExportPotential({}) }}
                 {{ filterCommodityCode({}) }}
                 {{ filterLatestExportEvidence({}) }}
