DST-1075 cleaned up CSP errors and removed legacy scripts from client

--- a/src/app/views/_generic.njk
+++ b/src/app/views/_generic.njk
@@ -25,8 +25,8 @@
 {% endblock %}
 
 {% block bodyEnd %}
-    <!-- build:js(src) /public/js/acs.min.js -->
-        <script src="/public/js/acs.js"></script>
+    <!-- build:js(src) /public/js/all.min.js -->
+        <script src="/public/js/all.js"></script>
     <!-- endbuild -->
 
     <script>window.GOVUKFrontend.initAll()</script>
