--- a/src/app/components/render-collection/template.njk
+++ b/src/app/components/render-collection/template.njk
@@ -59,49 +59,55 @@
             <hr class="govuk-section-break govuk-section-break--visible">
         </header>
         <ol class="govuk-list govuk-body app-collection-list">
-            <li class="app-collection-item">
+            <li class="app-collection-item ">
                 <div class="app-collection-heading">
-                    <h3 class="govuk-heading-m govuk-!-margin-top-4">Anker International</h3>
+                    <h3 class="app-header-company govuk-!-margin-top-4">Anker International</h3>
                     <span class="govuk-!-font-size-16 govuk-!-font-weight-bold app-badge">South East</span>
-                    <a class="govuk-link" href="#">View Data Hub profile</a>
-                    <span class="govuk-caption-m">Export potential:</span>
-                    <span class="govuk-body govuk-!-font-size-24">Very high</span>
+                    <a class="app-metric-link govuk-!-margin-bottom-3" href="#">View Data Hub profile</a>
+                    <span class="app-metric-potential-title">Export potential:</span>
+                    <span class="app-metric-potential-data">Very high</span>
                 </div>
                 <div class="govuk-grid-row">
                     <ul class="govuk-grid-column-one-half govuk-list">
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">Last export evidence:</span>
-                            April 2018
+                            <span class="app-metric-header govuk-!-display-inline">Last export evidence:</span>
+                            <span class="app-metric-value govuk-!-display-inline"> April 2018</span>        
                         </li>
+                        
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">DIT export wins:</span>
-                            12
+                            <span class="app-metric-header govuk-!-display-inline">DIT export wins:</span>
+                            <span class="app-metric-value govuk-!-display-inline">12</span>
                         </li>
+                        
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">DIT export opportunities:</span>
-                            6
+                            <span class="app-metric-header govuk-!-display-inline">DIT export opportunities:</span>
+                            <span class="app-metric-value govuk-!-display-inline"> 6 </span>
                         </li>
+                        
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">Cash in the bank:</span>
-                            &pound;20,500,000
+                            <span class="app-metric-header govuk-!-display-inline">Cash in the bank:</span>
+                            <span class="app-metric-value govuk-!-display-inline"> &pound;20,500,000 </span>
                         </li>
                     </ul>
                     <ul class="govuk-grid-column-one-half govuk-list">
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">HMRC export of goods:</span>
-                            7
+                            <span class="app-metric-header govuk-!-display-inline">HMRC export of goods:</span>
+                            <span class="app-metric-value govuk-!-display-inline">7</span>
                         </li>
+                        
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">HMRC import of goods:</span>
-                            1
+                            <span class="app-metric-header govuk-!-display-inline">HMRC import of goods:</span>
+                            <span class="app-metric-value govuk-!-display-inline">1</span>
                         </li>
+                       
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">Employee range:</span>
-                            1 to 15
+                            <span class="app-metric-header govuk-!-display-inline">Employee range:</span>
+                            <span class="app-metric-value govuk-!-display-inline">1 to 15</span>
                         </li>
+                        
                         <li>
-                            <span class="govuk-caption-m govuk-!-display-inline">Turnover:</span>
-                            &pound;42,000,000
+                            <span class="app-metric-header govuk-!-display-inline">Turnover:</span>
+                            <span class="app-metric-value govuk-!-display-inline">&pound;42,000,000</span>
                         </li>
                     </ul>
                 </div>
@@ -128,7 +134,8 @@
         </li>
 
         <li class="app-pagination-list-item"> 
-            <a class="app-pagination-link" href=""> 4 </a>
+            <a class="app-pagination-link" href=""> 4 
+            </a>
         </li>
 
         <li class="app-pagination-list-item"> 
