DST-1075 created string filterng, checkbox filtering with persistance, clear filters and also selected filters status

--- a/src/app/components/filter-company-name/template.njk
+++ b/src/app/components/filter-company-name/template.njk
@@ -7,6 +7,7 @@
             classes: "govuk-!-font-weight-bold app-filter-label"
         },
         id: "company-name",
-        name: "company-name"
+        name: "company-name",
+        value: params.companyName
     }) }}
 </div>
