--- a/src/app/components/filter-market-of-interest/template.njk
+++ b/src/app/components/filter-market-of-interest/template.njk
@@ -24,25 +24,7 @@
             idPrefix: "market-of-interest",
             name: "market-of-interest",
             classes: "app-filter-checkboxes-group",
-
-            items: [
-                {
-                    value: "Afghanistan",
-                    text: "Afghanistan"
-                },{
-                    value: "Albania",
-                    text: "Albania"
-                },{
-                    value: "London",
-                    text: "London"
-                },{
-                    value: "Algeria",
-                    text: "Algeria"
-                },{
-                    value: "Needs all countries",
-                    text: "Needs all countries"
-                }
-            ]
+            items: params.marketOfInterest
         }) }}
     </div>
 </div>
