--- a/src/app/components/filter-service-used/template.njk
+++ b/src/app/components/filter-service-used/template.njk
@@ -13,31 +13,7 @@
             idPrefix: "service-used",
             name: "service-used",
             classes: "app-filter-checkboxes-group",
-
-            items: [
-                {
-                    value: "in-datahub",
-                    text: "In Datahub"
-                },{
-                    value: "not-in-datahub",
-                    text: "Not in Datahub"
-                },{
-                    value: "dit-export-wins",
-                    text: "DIT Export Wins"
-                },{
-                    value: "hmrc-exports",
-                    text: "HMRC-Exports"
-                },{
-                    value: "hmrc-importers",
-                    text: "HMRC-Importers"
-                },{
-                    value: "find-a-buyer",
-                    text: "Find a buyer"
-                },{
-                    value: "intellectual-property-office",
-                    text: "Intellectual Property Office"
-                }
-            ]
+            items: params.serviceUsed
         }) }}
     </div>
 </div>
