--- a/src/app/components/filter-turnover/template.njk
+++ b/src/app/components/filter-turnover/template.njk
@@ -9,7 +9,8 @@
             
         },
         id: "turnover-minimum",
-        name: "turnover-minimum"
+        name: "turnover-minimum",
+        value: params.turnover.min
     }) }}
 
     {{ govukInput({
@@ -18,6 +19,7 @@
             text: "Maximum"
         },
         id: "turnover-maximum",
-        name: "turnover-maximum"
+        name: "turnover-maximum",
+        value: params.turnover.max
     }) }}
 </div>
