--- a/src/app/components/filter-uk-regions/template.njk
+++ b/src/app/components/filter-uk-regions/template.njk
@@ -14,36 +14,7 @@
             name: "uk-regions",
             classes: "app-filter-checkboxes-group",
 
-            items: [
-                {
-                    value: "East of England",
-                    text: "East of England"
-                },{
-                    value: "East Midlands",
-                    text: "East Midlands"
-                },{
-                    value: "London",
-                    text: "London"
-                },{
-                    value: "North East",
-                    text: "North East"
-                },{
-                    value: "North West",
-                    text: "North West"
-                },{
-                    value: "South East",
-                    text: "South East"
-                },{
-                    value: "South West",
-                    text: "South West"
-                },{
-                    value: "West Midlands",
-                    text: "West Midlands"
-                },{
-                    value: "Yorkshire and The Humber",
-                    text: "Yorkshire and The Humber"
-                }
-            ]
+            items: params.ukRegions
         }) }}
     </div>
 </div>
