--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -3655,6 +3655,7 @@
 
 .app-pagination-list {
   padding: 8px 16px;
+  font-family: Arial, Helvetica, sans-serif;
   color: #005ea5;
   text-decoration: none;
   margin: 0 auto;
@@ -3674,10 +3675,8 @@
   text-decoration: none;
   color: #005ea5;
   text-decoration: none;
-  font-family: Arial,Helvetica Neue,sans-serif;
   font-size: 16px;
   font-weight: 600;
-  line-height: 24px;
   text-transform: none; }
 
 .app-aligned-center {
@@ -3689,37 +3688,31 @@
 
 .app-metric-header {
   font-size: 16px;
-  font-family: "nta", Arial, sans-serif;
   color: #6f777b; }
 
 .app-metric-value {
   font-size: 16px;
-  font-family: "nta", Arial, sans-serif;
   color: black; }
 
 .app-metric-link {
   font-size: 16px;
-  font-family: "nta", Arial, sans-serif;
   color: #005ea5;
   display: inline-block;
   margin: 0px, 15px; }
 
 .app-metric-potential-title {
   font-size: 16px;
-  font-family: "nta", Arial, sans-serif;
   margin: 0px, 15px;
   display: block;
   color: #6f777b; }
 
 .app-metric-potential-data {
   font-size: 16px;
-  font-family: "nta", Arial, sans-serif;
   margin: 0px, 15px;
   font-weight: bold; }
 
 .app-header-company {
   font-size: 19px;
-  font-family: "nta", Arial, sans-serif;
   margin: 0px, 15px;
   font-weight: bold; }
 
